<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">播客播放器</string>
    <string name="pause">暂停</string>
    <string name="play">播放</string>
    <string name="rewind">后退15秒</string>
    <string name="forward">前进15秒</string>
    <string name="previous">上一个</string>
    <string name="next">下一个</string>
    <string name="volume">音量</string>
    <string name="podcast_list">播客列表</string>
</resources>